Currently they have a 10 minute cooldown but that's up to change.

- added a "one_of_a_kind" field to perks. 
If name isn't explanatory by itself, it means if 2 perks have "one_of_a_kind": "apple",
then you can only pick one of them. This will be used for my new passive skills but it should be really helpful to modpack makers.

v.1.3.4
Might be unstable due to internal refactors

- fix rare magic essence being a bit too rare. Needs config clear
- added common and magic loot crates
- reworked parts of code internally trying to clean it up, might be buggy
- added starting talent points. Determines how many bonus points a lvl 1 user has. Default 1, so users can now pick their first spell when they spawn.
- fix weapon attack dmg scaling in spells not working. 

v.1.3.3
- fix auto compat items not working on servers

v.1.3.2
- forgot to include chinese translation

v.1.3.1

- fix datapacks not loading correctly on server
- added new weapon icons by catscythe
- chinese translation

v.1.3.0

This update reworks skill gems into skill trees and turns spells into datapacks!

- skill gems gone
- added skill trees
- spells are now datapacks
- added skill tree datapacks
- added skill modifier datapacks

By investing points into Skill trees you can unlock stat bonuses and spells.
There's currently 6 skill trees: Fire, Ocean, Nature, Storm, Divine, Hunting.

There's currently no limit to the amount of trees you can invest in, besides the points themselves.

Oh, and skill trees are 100% datapacks. Meaning you can edit or add new ones to your will!
You can go nuts and add a perk that gives 100 health but locked under kill ender dragon advancement.. Or something crazy like that.

Spells were turned into datapacks too, so now you can make a spell that shoots 50 chicken eggs and deals nature damage or whatever you really want.
