@@ -8,7 +8,7 @@ org.gradle.jvmargs=-Xmx1G
 	loader_version=0.9.3+build.207
 
 # Mod Properties
-	mod_version = 1.3.4
+	mod_version = 1.3.5
 	maven_group = net.fabricmc
 	archives_base_name = Age-Of-Exile-1.16.3
 
