@@ -50,13 +50,17 @@ public class AttachedSpell {
     }
 
     public void tryActivate(String entity_name, SpellCtx ctx) {
-        if (entity_components.containsKey(entity_name)) {
-            for (ComponentPart entry : entity_components.get(entity_name)) {
-                entry.tryActivate(ctx);
+        try {
+            if (entity_components.containsKey(entity_name)) {
+                for (ComponentPart entry : entity_components.get(entity_name)) {
+                    entry.tryActivate(ctx);
+                }
+            } else {
+                System.out.println("Spell doesn't have data for spell entity called: " + entity_name + ". Spell id: " + ctx.calculatedSpellData.getSpell()
+                    .GUID());
             }
-        } else {
-            System.out.println("Spell doesn't have data for spell entity called: " + entity_name + ". Spell id: " + ctx.calculatedSpellData.getSpell()
-                .GUID());
+        } catch (Exception e) {
+            e.printStackTrace();
         }
     }
 
